--- a/index.html
+++ b/index.html
@@ -336,114 +336,114 @@
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Modeling,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Automation,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Innovation</a></li>
-                                                          </ul>
-                                                      </div>
-                                                  </div>
-                                                  <div class="col-sm-4">
-                                                      <div class="margin-t-10 sm-margin-t-0">
-                                                          <p class="margin-b-5"><strong>Project Leader:</strong> Houzi Iassam</p>
-                                                          <p class="margin-b-5"><strong>Designer:</strong> Houzi Iassam</p>
-                                                          <p class="margin-b-5"><strong>Developer:</strong> Houzi Iassam</p>
-                                                          <p class="margin-b-5"><strong>Customer:</strong> LinkedIn Page</p>
-                                                      </div>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </div>
-                                  <!-- End Work -->
-                              </div>
-                          </div>
-                          <!-- End Masonry Grid -->
-                      </div>
-                  </div>
-                  <!--// end row -->
-              </div>
-          </div>
-          <!-- End Work -->
-              
-          <!-- Contact -->
-          <div id="contact">
-              <div class="bg-color-sky-light">
-                  <div class="container content-lg">
-                      <div class="row">
-                          <div class="col-sm-3 sm-margin-b-30">
-                              <div class="text-right sm-text-left">
-                                  <h2 class="margin-b-0">Contacts</h2>
-                                  <p>Find me.</p>
-                              </div>
-                          </div>
-                          <div class="col-sm-8 col-sm-offset-1">
-                              <div class="row">
-                                  <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                      <h5>Location</h5>
-                                      <a href="#">Morocco, Casablanca</a>
-                                  </div>
-                                  <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                      <h5>Phone</h5>
-                                      <a href="#">+212 708061209</a>
-                                  </div>
-                                  <div class="col-md-3 col-xs-6">
-                                      <h5>Email</h5>
-                                      <a href="mailto:hou.issam.zi@gmail.fr">hou.issam.zi@gmail.fr</a>
-                                  </div>
-                                  <div class="col-md-3 col-xs-6">
-                                      <h5>Web</h5>
-                                      <a href="https://www.linkedin.com/in/issam-houzi-1er-061410145/">RailBIM.com</a>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                      <!--// end row -->
-                  </div>
-              </div>
-          </div>
-          <!-- End Contact -->
-          <!--========== END PAGE LAYOUT ==========-->
-  
-          <!--========== FOOTER ==========-->
-          <footer class="footer">
-              <div class="content container">
-                  <div class="row">
-                      <div class="col-xs-6">
-                          <img class="footer-logo" src="img/logo_Raibim.png" alt="RailBIM Logo">
-                      </div>
-                      <div class="col-xs-6 text-right sm-text-left">
-                          <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/issam-houzi-1er-061410145/">Portfolio</a> Created By: <a class="fweight-700" href="https://www.linkedin.com/in/issam-houzi-1er-061410145/">RailBIM</a></p>
-                      </div>
-                  </div>
-                  <!--// end row -->
-              </div>
-          </footer>
-          <!--========== END FOOTER ==========-->
-  
-          <!-- Back To Top -->
-          <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
-  
-          <!-- JAVASCRIPTS (Load JavaScripts at bottom, this will reduce page load time) -->
-          <!-- CORE PLUGINS -->
-          <script src="vendor/jquery.min.js" type="text/javascript"></script>
-          <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
-          <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  
-          <!-- PAGE LEVEL PLUGINS -->
-          <script src="vendor/jquery.easing.js" type="text/javascript"></script>
-          <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
-          <script src="vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
-          <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
-          <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
-          <script src="vendor/jquery.appear.js" type="text/javascript"></script>
-          <script src="vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
-          <script src="vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
-  
-          <!-- PAGE LEVEL SCRIPTS -->
-          <script src="js/layout.min.js" type="text/javascript"></script>
-          <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
-          <script src="js/components/masonry.min.js" type="text/javascript"></script>
-          <script src="js/components/wow.min.js" type="text/javascript"></script>
-  
-          <!-- Custom Script for Work Popup -->
-          <script>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-4">
+                                                    <div class="margin-t-10 sm-margin-t-0">
+                                                        <p class="margin-b-5"><strong>Project Leader:</strong> Houzi Iassam</p>
+                                                        <p class="margin-b-5"><strong>Designer:</strong> Houzi Iassam</p>
+                                                        <p class="margin-b-5"><strong>Developer:</strong> Houzi Iassam</p>
+                                                        <p class="margin-b-5"><strong>Customer:</strong> LinkedIn Page</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End Work -->
+                            </div>
+                        </div>
+                        <!-- End Masonry Grid -->
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </div>
+        <!-- End Work -->
+            
+        <!-- Contact -->
+        <div id="contact">
+            <div class="bg-color-sky-light">
+                <div class="container content-lg">
+                    <div class="row">
+                        <div class="col-sm-3 sm-margin-b-30">
+                            <div class="text-right sm-text-left">
+                                <h2 class="margin-b-0">Contacts</h2>
+                                <p>Find me.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-8 col-sm-offset-1">
+                            <div class="row">
+                                <div class="col-md-3 col-xs-6 md-margin-b-30">
+                                    <h5>Location</h5>
+                                    <a href="#">Morocco, Casablanca</a>
+                                </div>
+                                <div class="col-md-3 col-xs-6 md-margin-b-30">
+                                    <h5>Phone</h5>
+                                    <a href="#">+212 708061209</a>
+                                </div>
+                                <div class="col-md-3 col-xs-6">
+                                    <h5>Email</h5>
+                                    <a href="mailto:hou.issam.zi@gmail.fr">hou.issam.zi@gmail.fr</a>
+                                </div>
+                                <div class="col-md-3 col-xs-6">
+                                    <h5>Web</h5>
+                                    <a href="https://www.linkedin.com/in/issam-houzi-1er-061410145/">RailBIM.com</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--// end row -->
+                </div>
+            </div>
+        </div>
+        <!-- End Contact -->
+        <!--========== END PAGE LAYOUT ==========-->
+
+        <!--========== FOOTER ==========-->
+        <footer class="footer">
+            <div class="content container">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <img class="footer-logo" src="img/logo_Raibim.png" alt="RailBIM Logo">
+                    </div>
+                    <div class="col-xs-6 text-right sm-text-left">
+                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/issam-houzi-1er-061410145/">Portfolio</a> Created By: <a class="fweight-700" href="https://www.linkedin.com/in/issam-houzi-1er-061410145/">RailBIM</a></p>
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </footer>
+        <!--========== END FOOTER ==========-->
+
+        <!-- Back To Top -->
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
+
+        <!-- JAVASCRIPTS (Load JavaScripts at bottom, this will reduce page load time) -->
+        <!-- CORE PLUGINS -->
+        <script src="vendor/jquery.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+        <!-- PAGE LEVEL PLUGINS -->
+        <script src="vendor/jquery.easing.js" type="text/javascript"></script>
+        <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
+        <script src="vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
+        <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery.appear.js" type="text/javascript"></script>
+        <script src="vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
+        <script src="vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+
+        <!-- PAGE LEVEL SCRIPTS -->
+        <script src="js/layout.min.js" type="text/javascript"></script>
+        <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
+        <script src="js/components/masonry.min.js" type="text/javascript"></script>
+        <script src="js/components/wow.min.js" type="text/javascript"></script>
+
+        <!-- Custom Script for Work Popup -->
+        <script>
             document.addEventListener('DOMContentLoaded', function() {
                 // Attach event listeners to work items to open the popup
                 document.querySelectorAll('.work-popup-trigger').forEach(function(item) {
@@ -458,13 +458,12 @@
                 // Attach event listeners to hide buttons to close the popup
                 document.querySelectorAll('.work-popup-close').forEach(function(button) {
                     button.addEventListener('click', function() {
-                        this.closest('.work-popup-overlay').style.display = 'none';
+                        const popup = this.closest('.work-popup-overlay');
+                        popup.style.display = 'none';
                     });
                 });
             });
-          </script>
-
-      </body>
-      <!-- END BODY -->
-  </html>
-  
+        </script>
+    </body>
+    <!-- END BODY -->
+</html>
