--- a/index.html
+++ b/index.html
@@ -313,9 +313,12 @@
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>Boost your BIM projects with dynamic, adaptive families that offer revolutionary customization and precision. Follow our Rail BIM LinkedIn page for the latest insights and advancements.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Modeling,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Automation,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Innovation</a></li>
+                                                            <li class="work-popup-tag-item">
+                                                                <a class="work-popup-tag-link" href="https://www.linkedin.com/posts/issam-houzi-1er-061410145_revit-dynamo-famillesdynamique-activity-7168195121509830656-T35u?utm_source=share&utm_medium=member_desktop">
+                                                                    Watch Here
+                                                                    <img src="img/video.png" alt="Video Icon" style="width: 16px; height: auto; margin-left: 5px;">
+                                                                </a>
+                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -354,9 +357,12 @@
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>Discover the future of railway projects with my innovative AR web application! This groundbreaking tool allows you to visualize and interact with complex 3D assemblies anywhere—whether on-site, at work, or at home. Explore detailed catenary support sub-assemblies, place 3D models in your real-world environment for an immersive experience, and seamlessly integrate 3D studies with real-world results for unmatched precision.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Modeling,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Automation,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Innovation</a></li>
+                                                            <li class="work-popup-tag-item">
+                                                                <a class="work-popup-tag-link" href="https://www.linkedin.com/posts/issam-houzi-1er-061410145_raezalitaez-augmentaeze-raezalitaezaugmentaeze-activity-7198280839934210051-chBE?utm_source=share&utm_medium=member_desktop">
+                                                                    Watch Here
+                                                                    <img src="img/video.png" alt="Video Icon" style="width: 16px; height: auto; margin-left: 5px;">
+                                                                </a>
+                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -394,11 +400,13 @@
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>As a BIM Catenary Designer, I go beyond just modeling structures—I reshape the timeline of projects. My approach revolutionizes catenary design in BIM, turning each file into a milestone of innovation.</p>
-                                                        <p>Through a few strategic lines of code, I streamline the transfer of 3D models, representing a major leap in 3D data conversion and manipulation from Inventor to Revit.</p>
                                                         <ul class="list-inline work-popup-tag">
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Modeling,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Automation,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Innovation</a></li>
+                                                            <li class="work-popup-tag-item">
+                                                                <a class="work-popup-tag-link" href="https://www.linkedin.com/posts/issam-houzi-1er-061410145_inventor-revit-bimtransformation-activity-7150495819605975040-Yt5S?utm_source=share&utm_medium=member_desktop">
+                                                                    Watch Here
+                                                                    <img src="img/video.png" alt="Video Icon" style="width: 16px; height: auto; margin-left: 5px;">
+                                                                </a>
+                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -428,6 +436,7 @@
             </div>
           </div>
           <!-- End Work -->
+
               
           <!-- Contact -->
           <div id="contact">
