--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                       <div class="col-sm-8 col-sm-offset-1">
                           <div class="margin-b-60">
                               <p>I'm Sam Houzi, Passionate about the railway industry and technological innovation, I excel as a BIM Modeler for Catenary Studies. With significant experience, I possess deep expertise in the technical aspects of catenary studies, 3D modeling, and automation using Design Script and Python. Additionally, I create augmented reality experiences tailored to the railway sector, further enhancing project visualization and interaction.</p>
-                              <p>With over six years of experience in catenary studies and 3D BIM modeling, I have specialized in high-voltage catenary studies (25,000V, 3,000V, 1,500V, LAC), using advanced tools such as Revit, Inventor, Blender, and UnrealEngine5.</p>
+                              <p>With over six years of experience in catenary studies and 3D BIM modeling, I have specialized in high-voltage catenary studies (25,000V, 3,000V, 1,500V, LAC), using advanced tools such as Autocad, Revit, Inventor, Blender, and UnrealEngine5.</p>
                           </div>
   
                           <!-- Progress Box -->
@@ -241,7 +241,7 @@
                                           </div>
                                           <div class="service-info">
                                               <h3 class="margin-b-5">High-Voltage Catenary Studies (25kV, 3kV, 1.5kV, LAC)</h3>
-                                              <p class="margin-b-5">Expertise in conducting detailed high-voltage catenary studies using advanced BIM tools like Revit and Inventor.</p>
+                                              <p class="margin-b-5">Expertise in conducting detailed high-voltage catenary studies using advanced BIM tools like Autocad, Revit and Inventor.</p>
                                           </div>
                                           <a href="#" class="content-wrapper-link"></a>    
                                       </div>
@@ -461,7 +461,7 @@
                                   </div>
                                   <div class="col-md-3 col-xs-6">
                                       <h5>Email</h5>
-                                      <a href="mailto:hou.issam.zi@gmail.fr">hou.issam.zi@gmail.fr</a>
+                                      <a href="mailto:hou.issam.zi@gmail.fr">hou.issam.zi@gmail.com</a>
                                   </div>
                                   <div class="col-md-3 col-xs-6">
                                       <h5>Web</h5>
