--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <!-- BEGIN HEAD -->
   <head>
     <meta charset="utf-8" />
-    <title>Metronic "RailBIM" Frontend Freebie</title>
+    <title>Sam Houzi "RailBIM" Portfolio</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="" name="description" />
-    <meta content="" name="author" />
+    <meta content="" name="Portfolio" />
+    <meta content="" name="Sam Houzi" />
 
     <!-- GLOBAL MANDATORY STYLES -->
     <link
