--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- BEGIN HEAD -->
   <head>
     <meta charset="utf-8" />
-    <title>RailBIM Sam Houzi PortFolio</title>
+    <title>Sam Houzi Portfolio</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
